# apograph

./: .gitignore  AGENTS.md  CATALOG.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  catalog.schema.json  pyproject.toml
.github/ISSUE_TEMPLATE/: template-problem.yml
.github/workflows/: compile.yml  publish-cli.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md  WORKTREE_INVENTORY.md  architecture.md  artifacts.md  asset-policy.md  authoring.md  catalog-reference.md  licensing.md  release-process.md
docs/maintainer/: development.md  roadmap.md
docs/releases/: v0.1.0.md  v0.2.0.md
scripts/: assets.py  catalog.py  pack.py  preview.py  release.py  use.sh
scripts/apograph/: __init__.py  artifacts.py  compile.py
shared/latex/: apograph-colors.sty  apograph-math.sty  apograph-polito.sty  apograph-theorems.sty  apograph-typography.sty  apograph-unifi.sty
src/apograph_templates/: __init__.py  __main__.py  cli.py  errors.py  install.py  remote.py
templates/presentation/beamer-academic-latex/: main.tex
templates/presentation/beamer-polito-latex/: NOTICE  README.md  apograph-polito-colors.sty  beamerthemeapographpolito.sty  main.tex  showcase.tex
templates/report/academic-latex/: main.tex
templates/report/course-project-latex/: main.tex  slides.tex
templates/thesis/polito-latex/: NOTICE  README.md  bibliography.bib  config.tex  glossaries.tex  main.tex
templates/thesis/unifi-bsc-latex/: main.tex
tests/: test_artifacts.py  test_catalog.py  test_cli.py  test_compile.py  test_governance.py  test_release.py  test_shared_latex.py
(+56 files in other folders)
